<?xml version="1.0" encoding="utf-8"?>
<!-- One move: number, notation with a branch icon, time spent, black's win rate and score. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:paddingHorizontal="4dp"
    android:paddingVertical="1dp"
    android:background="@drawable/move_row_background"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:id="@+id/move_number"
        style="@style/MoveListCell"
        android:layout_width="28dp"
        android:textAlignment="viewEnd"
        android:textColor="?attr/colorOnSurfaceVariant" />

    <TextView
        android:id="@+id/move_text"
        style="@style/MoveListCell"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginStart="4dp"
        android:drawablePadding="2dp" />

    <TextView
        android:id="@+id/move_time"
        style="@style/MoveListCell"
        android:layout_width="44dp"
        android:layout_marginStart="4dp"
        android:textAlignment="viewEnd"
        android:textColor="?attr/colorOnSurfaceVariant" />

    <TextView
        android:id="@+id/move_win_rate"
        style="@style/MoveListCell"
        android:layout_width="44dp"
        android:textAlignment="viewEnd" />

    <TextView
        android:id="@+id/move_score"
        style="@style/MoveListCell"
        android:layout_width="56dp"
        android:textAlignment="viewEnd" />
</LinearLayout>
